@@ -564,6 +564,7 @@ class ExcelToX
       replace r, [name, 'Formulae'], "Workbook tables", [name, 'Formulae']
       
       replace ReplaceRangesWithArrayLiterals, [name, 'Formulae'],  [name, 'Formulae']
+      replace ReplaceArithmeticOnRanges, [name, 'Formulae'],  [name, 'Formulae']
     end
   end
     
@@ -612,6 +613,7 @@ class ExcelToX
       
       # The result of the indirect might be a range, which we need to simplify
       replace ReplaceRangesWithArrayLiterals, [name, 'Formulae'],  [name, 'Formulae']
+      replace ReplaceArithmeticOnRanges, [name, 'Formulae'],  [name, 'Formulae']
       replace ReplaceArraysWithSingleCells, [name, 'Formulae'],  [name, 'Formulae']
     end
   end
