@@ -16,3 +16,4 @@ require_relative "simplify/replace_common_elements_in_formulae"
 require_relative "simplify/replace_arrays_with_single_cells"
 require_relative "simplify/replace_values_with_constants"
 require_relative "simplify/sort_into_calculation_order"
+require_relative "simplify/replace_arithmetic_on_ranges"
